--- a/client/src/components/Header/style.css
+++ b/client/src/components/Header/style.css
@@ -46,10 +46,15 @@
   font-size: 20px;
 }
 
-.Header__nav-link a {
+.Header__nav-link a,
+.Header__nav-link button {
   text-decoration: none;
   color: #999;
   align-items: baseline;
+}
+.Header__nav-link button {
+  background-color: #fff;
+  border: none;
 }
 
 .Header__nav-icon.fa {
@@ -59,7 +64,9 @@
 }
 
 .Header__nav-link a:hover,
-.Header__nav-link a:active {
+.Header__nav-link a:active,
+.Header__nav-link button:hover,
+.Header__nav-link button:active {
   color: #262626;
 }
 
@@ -72,6 +79,12 @@
   padding: 0;
   width: 33px;
   border-radius: 15px;
+}
+
+.nav-link {
+  display: block;
+  margin: 0.5rem 1rem !important;
+  padding: unset !important;
 }
 
 @media screen and (max-width: 555px) {
